--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "json-server": "json-server --watch db.json -p 3100"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
     "axios": "^1.6.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "json-server": "^0.17.4",
     "next": "14.0.3",
     "react": "^18",
